--- a/hotel-booking-system-frontend/src/index.css
+++ b/hotel-booking-system-frontend/src/index.css
@@ -94,7 +94,7 @@ body {
     position: relative;
     height: 150px;
     background-size: cover;
-    background-image: url("./assets/download (1).jpeg");
+    background-image: url("./assets/images/banner2.jpg");
     background-position: center center;
 }
 .header-title {
@@ -189,11 +189,12 @@ body {
 
 /* The header banner */
 .header-banner {
-    background-image:  url("./assets/download (2).jpeg");
+    background-image:  url("./assets/images/banner.jpg");
     background-size: cover;
     background-position: center;
     position: relative;
     height: 80vh;
+    filter: brightness(1.2);
 }
 
 .header-banner {
